update ticket api
